# apache-external-duo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  check-duo.py  check-external.py  pyproject.toml  test_check_duo.py  test_check_external.py
.github/: dependabot.yaml
.github/workflows/: test.yaml
example/: Dockerfile
example/conf/: entrypoint
example/conf/etc/apache2/sites-enabled/: 000-default.conf  100-login.conf
example/conf/etc/sudoers.d/: wwwdata
examples/: Dockerfile  docker-compose.yaml
examples/conf/etc/apache2/sites-enabled/: 000-default.conf
examples/container/: Dockerfile
examples/container/conf/: entrypoint
examples/container/conf/etc/apache2/sites-enabled/: 100-login.conf
examples/container/conf/var/www/html/login/: index.html
examples/container/conf/var/www/html/private/: index.html
src/checkduo/: checkduo.py
src/checker/: duo.py
tests/: test_check_duo.py  test_configuration.py
