[tool.poetry]
name = "checkduo"
version = "0.0.0"  # DO NOT CHANGE
description = "Verify credentials and call out to Duo."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "checkduo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
schema = "^0.7.5"
redis = "^4.5.4"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-mypy = "^0.10.3"
pre-commit = "^3.2.2"

# mypy dependencies
types-requests = "^2.28.11.17"
types-redis = "^4.5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
