[tool.poetry]
name = "checkduo"
version = "0.0.0"  # DO NOT CHANGE
description = "Verify credentials and call out to Duo."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "checkduo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
schema = "^0.7.5"
redis = "^5.0.1"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-mypy = "^0.10.3"
pre-commit = "^3.5.0"

# mypy dependencies
types-requests = "^2.31.0.9"
types-redis = "^4.6.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
